<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntSys</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menuOptionEndSession">End This Session</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="title_activity_create_session">CreateSessionActivity</string>
    <string name="title_tab_session_browser">Session Browser</string>
    <string name="title_tab_statistics">Statistics</string>
    <string name="action_new">new</string>
    <string name="action_delete">delete</string>
    <string name="action_edit">edit</string>
    <string name="action_share">share</string>
    <string name="action_overflow">overflow</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="commitResultButtonName">OK</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="detailMeanText">Mean: 7.4</string>
    <string name="detailMaxText">Max: 9</string>
    <string name="detailWindageText">Windage: 0.4</string>
    <string name="detailElevationText">Elevation: 0.5</string>
    <string name="detailTotalScoreText">Total Score: 60</string>
    <string name="detailScoresText">Scores: 10 10 10 10 10</string>
    <string name="title_activity_series">SeriesActivity</string>
	<string name="alert_ok">OK</string>
	<string name="alert_cancel">Cancel</string>
	<string name="alert_title">Warning</string>
	<string name="alert_message">Are you sure to delete this item?</string>
	<string name="createSessionPersonNameTextViewText">Name:</string>
	<string name="createSessionPersonNameEditHintText">Max Mustermann</string>
	<string name="title_tab_series_browser">Targets</string>
	<string name="menuOptionViewSessionHistory">View Session History</string>
	<string-array name="createSession_Type_selections">
	    <item>Training</item>
        <item>district Championship</item>
        <item>regional Championship</item>
        <item>national Championship</item>
        <item>international Championship</item>
	</string-array>
	<string name="leaveCurrentSessionAlertTitle">Really End This Session?</string>
	<string name="leaveCurrentSessionAlertMessage">This will end the current Session and put in the Session History</string> 
	<string name="detailTotalScoreTextStats">Total Score: 145</string>
	<string name="activity_title_SessionActivity">Sesssion</string>
	<string name="activity_title_SeriesActivity">Series</string>
	<string name="activity_title_SessionList">Shooting Diary</string>
	<string name="activity_title_Details">Details</string>
	<string name="activity_title_CreateSession">Create new Session</string>
	<string name="activity_title_ResultActivity">Edit your shots</string>
	
</resources>
