<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.listviewtest.SessionListActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:id="@+id/action_example2"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom"/>
    
    <item
        android:id="@+id/action_newItem"
        android:title="@string/action_new"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new"/>
    
    <item
        android:id="@+id/action_overflow"
        android:title="@string/action_overflow"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_overflow"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
